# ESP32-Data-Logger

./: .releaserc  ESP32-Data-Logger.code-workspace  README.md  package.json  pnpm-lock.yaml
.github/wokrflows/: tauri-build.yml
.github/workflows/: tauri-build.yml
app/: .eslintrc.json  .prettierrc.json  DevDocs.md  index.html  jsdoc.conf.json  package.json  pnpm-lock.yaml  tailwind.config.cjs  tailwind.config.js  tsconfig.json  vite.config.ts
app/assets/css/: index.css  titlebar.css
app/extras/: snippets.md
app/public/: splashscreen.html
app/public/images/icons/: icon.icns
app/scripts/: custom.js
app/src/: App.tsx  main.tsx  vite-env.d.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/.cargo/: config.toml
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: main.rs
app/src-tauri/src/modules/: mod.rs
app/src-tauri/src/modules/m_dnsquery/: mod.rs
app/src-tauri/src/modules/rest_client/: mod.rs
app/src-tauri/src/modules/tauri_commands/: mod.rs
app/src/API/: getData.js
app/src/components/Chart/: index.tsx
app/src/components/ChartData/: index.tsx
app/src/components/CustomButton/: index.tsx
app/src/components/CustomSlideAnimation/: index.tsx
app/src/components/Greeting/: index.tsx
app/src/components/Header/: index.tsx
app/src/components/Header/CustomPopover/: index.tsx
app/src/components/Inputs/: index.tsx
app/src/components/Modal/: index.tsx  styles.css
app/src/components/NewMenu/: index.tsx  styles.css
app/src/components/NewMenu/DevTools/: index.tsx
app/src/components/Selection/Debug/: index.tsx
app/src/components/SettingsPageData/: index.tsx
app/src/components/Switch/: index.tsx  style.css
app/src/components/Tooltip/: index.tsx  styles.css
app/src/context/: ContextWrapper.jsx  GlobalContext.js
app/src/pages/Charts/: index.tsx
app/src/pages/Home/: index.tsx
app/src/pages/Settings/: index.tsx  styles.css
app/src/pages/routes/: Routes.tsx  index.ts
app/src/routes/: Routes.tsx  index.tsx
app/src/routes/app/: index.tsx
app/src/static/ChartData/: index.tsx
app/src/static/SettingsPageData/: index.tsx
app/src/static/types/: index.d.ts
app/src/static/types/enums/: index.ts
app/src/static/types/interfaces/: index.ts
app/src/store/context/api/: index.tsx
app/src/store/context/app/: index.tsx
app/src/store/context/chart/: index.tsx
app/src/store/context/main/: index.tsx
app/src/styles/: imports.css  index.css  titlebar.css
app/src/utils/: utils.ts
app/src/utils/Helpers/: chartRequest.tsx  localStorageHandler.tsx
app/src/utils/hooks/: chartData.tsx  chartRequestHook.ts  useMDNSScanner.ts
scripts/: prepareCMD.sh
(+2 files in other folders)
