[package]
name = "esp32_data_logger"
version = "0.1.3"
description = "Data Logger App for Espressif chips"
authors = ["ZanzyTHEbar"]
license = "MIT"
repository = "https://github.com/ZanzyTHEbar/ESP32-Data-Logger"
default-run = "esp32_data_logger"
edition = "2021"
rust-version = "1.69"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
whoami = "1.4.1"
lazy_static = "1.4.0"
log = "0.4.19"
futures-util = "0.3.28"
mdns-sd = "0.7.3"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tauri]
version = "1.4.1"
features = [
    "process-exit",
    "protocol-asset",
    "fs-all",
    "shell-sidecar",
    "dialog-all",
    "http-all",
    "icon-ico",
    "notification-all",
    "os-all",
    "path-all",
    "process-relaunch",
    "shell-open",
    "system-tray",
    "window-center",
    "window-close",
    "window-create",
    "window-hide",
    "window-maximize",
    "window-minimize",
    "window-request-user-attention",
    "window-set-decorations",
    "window-set-focus",
    "window-set-fullscreen",
    "window-set-position",
    "window-set-resizable",
    "window-set-size",
    "window-set-title",
    "window-show",
    "window-start-dragging",
    "window-unmaximize",
    "window-unminimize",
]

[dependencies.reqwest]
version = "0.11"
features = ["json", "rustls-tls"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.tauri-plugin-window-state]
git = "https://github.com/tauri-apps/plugins-workspace"
branch = "dev"

[dependencies.tauri-plugin-single-instance]
git = "https://github.com/tauri-apps/tauri-plugin-single-instance/"
branch = "dev"

[dependencies.tauri-plugin-upload]
git = "https://github.com/tauri-apps/plugins-workspace"
branch = "dev"

[dependencies.tauri-plugin-log]
git = "https://github.com/tauri-apps/plugins-workspace"
branch = "dev"

[dependencies.tauri-plugin-store]
git = "https://github.com/tauri-apps/plugins-workspace"
branch = "dev"

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[profile]
[profile.dev]
debug = 0

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
